
What's New in Python 2.3.1?
===========================

*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- Bug #795506:  The % formatting operator did not support '%F' as
  had been documented.

- Bug #775985: Only set stdout.encoding if a codec is available.

Extension modules
-----------------

- Bug #793826:  re-ordered the reference counting code in
  itertools.izip() to prevent re-entrancy anomalies.

- Bug #770485: cStringIO did not support the f.closed attribute.

- Patch #781722: Gracefully reject AF_INET6 in socket.inet_pton
  if IPv6 is disabled.

- Bug #783312: Release host name memory in socket calls.

Library
-------

- Bug #797650:  textwrap.py now avoids an infinite loop when one of the
  indent arguments is set longer than the total width.

- Bug #796149: time.strptime() now handles having parentheses in the
  format string properly.

- The email package handles some RFC 2231 parameters with missing
  CHARSET fields better.

- sets.py now runs under Py2.2.  In addition, the argument restrictions
  for most set methods (but not the operators) have been relaxed to
  allow any iterable.  Also the Set.update() has been deprecated because
  it duplicates Set.union_update().

- Bug #778964:  random.seed() now uses fractional seconds so that
  rapid successive, seeding calls will produce different sequences.

- Bug #777664: Add Tkconstants.HIDDEN.

- Bug #781065: test_normalization is updated to the current
  URL of the Unicode 3.2 normalization file.

- Bug #782369:  fix memory leak in array module.

- Caching in _strptime.py has been re-introduced.  This leads to a large
  performance boost at the cost of not being thread-safe from locale
  changes while executing time.strptime() .

- Bug #783952: time.strptime() now properly handles issue of
  time.tzname[0] == time.tzname[1] while time.daylight is set to be
  true.

IDLE
----

- Bug #774680: IDLE now does not fail to save the file anymore